k8s/gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy-gateway
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: skillpulse-gateway
  namespace: skillpulse
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  gatewayClassName: envoy-gateway
  listeners:
  
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname:  44.240.54.126.nip.io



      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: skillpulse-tls
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: skill-route
  namespace: skillpulse
spec:
  hostnames:
    - 44.240.54.126.nip.io   
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: skillpulse-gateway
      sectionName: https
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: skillpulse-gateway
      sectionName: http
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: frontend
          port: 80
          weight: 1
---

apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: skillpulse-session
  namespace: skillpulse
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: skillpulse-route
  loadBalancer:
    type: ConsistentHash
    consistentHash:
      type: Cookie
      cookie:
        name: SKILLPULSE_AFFINITY
        ttl: 3600s
